# openclaw-chat

./: .claude-env  AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  USER.md
.github/workflows/: build-tauri.yml
client/: package.json
client/src/: App.css  App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs
client/src/components/: Chat.css  Chat.tsx
course-materials/: day1-claude-code-setup.md  knowledge-base.md  token-management-design.md  token-management-phase1.md  token-management-phase2.md  token-management-phase3.md
course-materials/code-examples/shell-scripts/: cron-examples.sh
course-materials/drafts/: 2026-02-13-first-session.md  winscp-tutorial.md
course-materials/outlines/: course-outline.md
diary/: template.md
diary/2026/: 2026-02-14.md
memory/: 2026-02-13.md  2026-02-15.md
projects/openclaw-chat/: README.md
projects/openclaw-chat/client/: README.md  index.html  package.json  vite.config.ts
projects/openclaw-chat/client/src/: App.tsx  index.css
projects/openclaw-chat/client/src-tauri/: Cargo.toml  tauri.conf.json
projects/openclaw-chat/client/src-tauri/icons/: README.md
projects/openclaw-chat/docs/: architecture.md
projects/openclaw-chat/server/: .env  .env.example  README.md  package.json  pnpm-lock.yaml
server/: file-service.js  index.js  package-lock.json  package.json  websocket-handler.js
server/public/: client.html
server/src/: file-service.js  websocket-manager.js
skills/personal-diary/: README.md  SKILL.md  diary.sh  skill.json
(+15 files in other folders)
